--- a/index.html
+++ b/index.html
@@ -23,11 +23,8 @@
         <h2 class="texto_header">Doy gracias a dios por darme unos padres increibles</h2>
     </header>
 
-    <div class="contenedor_principal">
-
-        <h2 class="" style="color: rgb(240, 207, 21);"> kljnlfdnsllsdf </h2>
-
-        <h2 class="palabra">jbdjsfbjfdsbkjbdskjbdfjk</h2>
+    <div class="contenedor">
+        
     </div>
 
     <script src="js/app.js"></script>
