--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.
     0">
     <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Alkalami&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="estilos.css">
     <title>Mi primer año Mariajulia</title>
 </head>
@@ -23,10 +24,10 @@
         <h2 class="texto_header">Doy gracias a dios por darme unos padres increibles</h2>
     </header>
 
-    <div id="animado" class="album">
+    <div id="animado contenedor" class="album">
         <h3> Mi primer año</h3>
 
-        <p class="texto" >Doy gracias a dios por permitirme mi primer año de vida junto a las personas que amo, y que me han cuidado con tanta dedicación</p>
+        <p class="texto" >Doy gracias a dios por permitirme mi primer año de vida junto a las personas que amo, y que me han cuidado con tanta</p>
          <div class="contenido contenedor-slider">
             <div class="carrusel slider" id="slider">
                 <div class="slider__section">
@@ -87,8 +88,25 @@
 
     </div>
 
+    <footer class="site-footer">
+        <div class="contenedor">
+            <div class="barra">
+                <a href="/">
+                    <p class="no-margin">Daniel<span>RC</span></p>
+                </a>
+                <nav class="navegacion">
+                    <a href="https://wa.link/m5axbj" target="_blank"> Contacto para cotización
+                    <div class="wp">
+                        <img src="img/wp.png" alt="">
+                    </div></a>
+                    
+                </nav>
+            </div><!--Cierra la barra-->
+        </div>
+    </footer>
+    </footer>
+
     <script src="js/app.js"></script>
-    <script src="js/scroll.js"></script>
     <script src="js/conteo.js"></script>
 </body>
 </html>
