--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
             <div class="logo">Mariajulia</div>
             <ul class="menu">
                 <li><a href="#animado">Albúm</a></li>
-                <li><a href="#">Asistire</a></li>
-                <li><a href="#">Ubicación</a></li>
+                <li><a href="https://wa.link/qjr0mo">Asistire</a></li>
+                <li><a href="https://goo.gl/maps/F7CLULmQpxaNrnxd8">Ubicación</a></li>
             </ul>
         </nav>
 
         <h2 class="texto_header">Doy gracias a dios por darme unos padres increibles</h2>
     </header>
 
-    <div id="animado contenedor" class="album">
+    <div id="animado" class="album navegacion">
         <h3> Mi primer año</h3>
 
         <p class="texto" >Doy gracias a dios por permitirme mi primer año de vida junto a las personas que amo, y que me han cuidado con tanta</p>
@@ -95,9 +95,9 @@
                     <p class="no-margin">Daniel<span>RC</span></p>
                 </a>
                 <nav class="navegacion">
-                    <a href="https://wa.link/m5axbj" target="_blank"> Contacto para cotización
+                    <a href="https://wa.link/m5axbj"> ¿Deseas una invitación o pagina Web? Contactame
                     <div class="wp">
-                        <img src="img/wp.png" alt="">
+                        <img src="img/wp.png" alt="whatsapp">
                     </div></a>
                     
                 </nav>
