--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         </p>
         <div class="final">
             <div class="boton_unico">
-                <a class="boton_ubicacion" href="https://wa.link/pflctb">Confirmar asistencia</a>
+                <a class="boton_ubicacion" href="https://wa.link/7aesjc">Confirmar asistencia</a>
             </div>
         </div>
        
