--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="logo">Mariajulia</div>
             <ul class="menu">
                 <li><a href="#animado">Albúm</a></li>
-                <li><a href="https://wa.link/pflctb">Asistire</a></li>
+                <li><a href="https://wa.link/7aesjc">Asistire</a></li>
                 <li><a href="https://goo.gl/maps/F7CLULmQpxaNrnxd8">Ubicación</a></li>
             </ul>
         </nav>
